# calculadora

./: .gitignore  CLEAN_ARCHITECTURE.md  CMakeLists.txt  README.md  agente.md
include/: calculator.h  utils.h
include/domain/: CalculationResult.h  Operation.h
include/infrastructure/: InMemoryCalculatorRepository.h
include/interfaces/: ICalculatorRepository.h  IPresenter.h
include/presentation/: ConsoleInputHandler.h  ConsolePresenter.h
include/usecases/: ExecuteOperationUseCase.h  GetLastResultUseCase.h
src/: calculator.cpp  main.cpp  utils.cpp
src/domain/: CalculationResult.cpp  Operation.cpp
src/infrastructure/: InMemoryCalculatorRepository.cpp
src/presentation/: ConsoleInputHandler.cpp  ConsolePresenter.cpp
src/usecases/: ExecuteOperationUseCase.cpp  GetLastResultUseCase.cpp
